# Kubo

./: CMakeLists.txt  README.md  main.cpp
include/: glad.h
shaders/: depth.frag  depth.vert  voxel.frag  voxel.vert
src/: camera.h  glad.c  model.h  shader.h  voxelvolume.h
